# goit-pythonweb-hw-10

./: .gitattributes  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 1d8556d944af_add_user.py  a98313e4cd57_initial_migration.py  bbcd0b5df4d4_add_confirmed_field_to_user.py
src/: schemas.py
src/api/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/services/: auth.py  cloudinary.py  contacts.py  email.py  users.py
src/services/templates/: verify_email.html
